...
    private func setupUI() {
        self.title = BHText.home_title.value
        
        let add = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(goToAddLocation))
        navigationItem.rightBarButtonItem = add
        // UITest identifier
        add.accessibilityIdentifier = "xctest--btnAdd"
        
        self.lblEmpty.text = BHText.home_empty.value
    }
    
    private func setupTableView() {
        // UITest identifier
        self.tableView.accessibilityIdentifier = "xctest--homeTableView"
        self.tableView.registerCell(name: HomeWeatherCell.className)
        self.tableView.separatorStyle = .none
    }
    
    private func getWeatherData() {
        self.loader.startAnimating()
...
