...
        self.loader.stopAnimating()
        self.tableView.reloadData()
    }
    
    private func setupTableView() {
        // UITest identifier
        self.tableView.accessibilityIdentifier = "xctest--addTableView"
        self.tableView.registerCell(name: LocationCell.className)
        self.tableView.separatorStyle = .none
        self.tableView.delegate = self
        self.tableView.dataSource = self
    }
   
...
